[package]
name = "oom-monitor"
version = "0.2.0"
authors = ["Tormod G. Hellen <tormod@mbr-targeting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "*"
chrono = "*"
regex = "*"
users = "*"
log = "*"
env_logger = "*"