[package]
name = "oom-monitor"
version = "1.2.0"
authors = ["Tormod G. Hellen <tormod@mbr-targeting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.9.0"
chrono = "0.4.7"
regex = "1.2.0"
users = "0.9.1"
log = "0.4.8"
env_logger = "0.6.2"