[package]
name = "oom-monitor"
version = "1.3.2"
authors = ["Tormod G. Hellen <tormod@mbr-targeting.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.9.5"
chrono = "0.4.19"
regex = "1.5.6"
users = "0.11.0"
log = "0.4.17"
env_logger = "0.9.0"
